pricing : fixed follow scroll problem on small scree

--- a/static/src/css/ons_cust_opennet_frontend.css
+++ b/static/src/css/ons_cust_opennet_frontend.css
@@ -113,3 +113,7 @@ input[type="checkbox"] {
 	padding: 10px;
 	font-size: 16px;
 }
+
+.follow-scroll {
+	position: absolute;
+}
